# cpp-app-template

./: .gitignore  CMakeLists.txt  README.md  install.sh  sonar-project.properties
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: CPackConfig.cmake  ClangFormat.cmake  CodeCoverage.cmake  ConfigFile.cmake  CppCheck.cmake  Doxygen.cmake  include_all.cmake
lib/: CMakeLists.txt
tests/: CMakeLists.txt
